Subiendo mis cambios

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
 *{
     background-color: bisque;
 }
+
+img{
+    width: 250px;
+    border-radius: 20px;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(2,30%);
+}
